# rust-gui-timer

./: Cargo.toml  README.md  timer-app.desktop
icons/: timer-app.icns
src/: main.rs
