[package]
name = "timer-app"
version = "1.2.0"
edition = "2024"
description = "A minimal desktop timer"
license = "GPL-3.0"
repository = "https://github.com/kartikay-bagla/desktop-timer"
authors = ["Kartikay Bagla"]

[dependencies]
eframe = "0.29"
image = { version = "0.25", default-features = false, features = ["png"] }
open = "5"

[package.metadata.bundle]
name = "Timer"
identifier = "com.kartikay.timer-app"
icon = ["icons/timer-app.icns"]
version = "1.2.0"
copyright = "Copyright (c) 2025 Kartikay Bagla. GPL v3"
short_description = "A minimal desktop timer"
osx_minimum_system_version = "15.1"
